attempting to make the form look nicer
centered text, button and label on the same line

--- a/css/screen.css
+++ b/css/screen.css
@@ -28,7 +28,6 @@ h3 {
 
 form {
 	white-space: pre;
-	padding: 20px;
 	border-radius:5px;
 	max-width: 1000px;
 	margin: 0 auto;
@@ -39,7 +38,30 @@ form {
 
 label {
 	font-size:24px;
+	display:block;
 	font-family: "Trebuchet MS";
+}
+
+.text {
+	text-align:center;
+}
+
+
+input[type="text"] {
+	width: 75%;
+}
+input[type="radio"]{
+	
+}
+
+.tool {
+	color: red;
+	text-align:center;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+}
+
+.choice {
+	float:left;
 }
 
 input{
@@ -57,5 +79,8 @@ input{
 	}
 	h3{
 		font-size:64px;
+	}
+	input[type="text"] {
+		width: 90%;
 	}
 }
