--- a/css/screen.css
+++ b/css/screen.css
@@ -3,7 +3,7 @@ body {
 }
 h1 {
 	color:#A9C4F4;
-	font-size: 72px;
+	font-size: 64px;
 	text-align: center; 
 	font-family: "Tahoma";
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
@@ -12,7 +12,7 @@ h1 {
 
 h2 {
 	color:#294474;
-	font-size: 48px;
+	font-size: 36px;
 	text-align: center;
 	font-family: "Trebuchet MS";
 	padding: 10px;
@@ -20,7 +20,7 @@ h2 {
 
 h3 {
 	color:#294474;
-	font-size: 40px;
+	font-size: 30px;
 	font-family: "Helvetica";
 	text-align: center;
 	padding: 10px;
@@ -64,6 +64,10 @@ input[type="checkbox"]{
     height: 24px;
 }
 
+input[type=submit] {
+	transform:translateX(23em);
+}
+
 .tool {
 	color: red;
 	text-align:center;
@@ -80,6 +84,8 @@ input{
 	border-width: 4px;
 	border-radius: 12px;
 }
+
+
 
 @media screen and (min-width: 800px) {
 	h1{
