--- a/css/screen.css
+++ b/css/screen.css
@@ -112,3 +112,21 @@ input{
 	}
 }
 
+@media screen and (min-width: 600px) {
+	h1{
+		font-size:72px;
+	}
+	h2 {
+		font-size:48px;
+	}
+	h3{
+		font-size:36px;
+	}
+	input[type="text"] {
+		width: 90%;
+	}
+	.choicesecret {
+	font-size:24px;
+}
+}
+
