--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
 	background-color: #5388E9;
 }
@@ -14,7 +15,7 @@ h2 {
 	color:#294474;
 	font-size: 36px;
 	text-align: center;
-	font-family: "Trebuchet MS";
+	font-family: "Open Sans";
 	padding: 10px;
 }
 
