--- a/css/screen.css
+++ b/css/screen.css
@@ -6,7 +6,7 @@ h1 {
 	color: #e8f0fc;
 	font-size: 64px;
 	text-align: center; 
-	font-family: "Tahoma";
+	font-family: "Tahoma", "Helvetica", "Verdana", sans-serif;
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.3);
 	padding: 10px;
 }
@@ -15,14 +15,14 @@ h2 {
 	color:#294474;
 	font-size: 36px;
 	text-align: center;
-	font-family: "Open Sans";
+	font-family: "Open Sans", "Helvetica", "Verdana", sans-serif;
 	padding: 10px;
 }
 
 h3 {
 	color:#294474;
 	font-size: 30px;
-	font-family: "Helvetica";
+	font-family: "Helvetica", "Verdana", sans-serif;
 	text-align: center;
 	padding: 10px;
 }
@@ -40,7 +40,7 @@ form {
 label {
 	font-size:24px;
 	display:grid;
-	font-family: "Trebuchet MS";
+	font-family: "Trebuchet MS", "Helvetica", "Verdana", sans-serif;
 }
 
 .text {
